# MultiAgent-RetrievalQA

./: .gitignore  README.md  main.py  pyproject.toml
rag-agent/: filestruct.txt
rag-agent/app/: constants.py  main.py
rag-agent/app/agents/: critic.py  decomposer.py  orchestrator.py  query_rewriter.py  reasoner.py  router.py
rag-agent/app/api/: routes.py  schemas.py
rag-agent/app/ingestion/: chunker.py  embedder.py  indexer.py  loader.py
rag-agent/app/memory/: chat_memory.py
rag-agent/app/models/: llm.py
rag-agent/app/prompts/: critic.txt  decomposer.txt  reasoner.txt  rewriter.txt  router.txt
rag-agent/app/retrieval/: hybrid.py  reranker.py  retriever.py
rag-agent/app/utils/: helpers.py  logger.py
rag-agent/data/index/: metadata.pkl
rag-agent/eval/: eval_runner.py  questions.json  results.json  scorer.py
rag-agent/scripts/: build_index.py  generate_questions_json.py  test_retrieval.py
rag-agent/ui/: streamlit_app.py
